# cosmic-crunchers

./: README.md  dev_setup.sh  implementation.md  start.sh
.github/workflows/: ci.yml
client/: package-lock.json  package.json
client/src/: main.ts  style.css
docs/: design.md  implementation.md
server/: Cargo.toml
server/src/: components.rs  main.rs  simulation.rs  wire_format.rs
tools/: README.md
