[package]
name = "cosmic-crunchers-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
bincode = "2.0.1"
futures-util = "0.3.31"
hecs = "0.10.5"
rand = "0.9.2"
rapier2d = "0.29.0"
redb = "2.6.3"
rkyv = "0.8.11"
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = "0.28.0"
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
